[gd_scene load_steps=2 format=3 uid="uid://dr7kfrd8ougse"]

[ext_resource type="Script" uid="uid://b66dsc20bkx3c" path="res://Scripts/GameOverScreen.gd" id="1_d4r0f"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d4r0f")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.40784314)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -211.0
offset_top = -78.5
offset_right = 211.0
offset_bottom = 78.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -20.0
offset_right = 57.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "COMBAT OVER"
horizontal_alignment = 1

[node name="WinnerLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "PLAYER 1 WINS"
horizontal_alignment = 1

[node name="RematchButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Rematch"

[node name="MenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
